language/move-lang/tests/move_check/translated_ir_tests/commands/if_assigns_else_doesnt.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/if_assigns_else_doesnt.move:11:12 ───
    │
 11 │     assert(x == 42, 42);
    │            ^ Invalid usage of local 'x'
    ·
  3 │     let x;
    │         - The local might not have a value due to this position. The local must be assigned a value before being used
    │

