language/move-lang/tests/move_check/translated_ir_tests/commands/if_assigns_else_doesnt.move
script {
fun main() {
    let x;
    let y;
    if (true) {
        x = 42;
    } else {
        y = 0;
        y;
    };
    0x0::Transaction::assert(x == 42, 42);
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
